--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-spring.application.name=system_batch
+#DataSource Configuration for Spring
+spring.datasource.jdbcUrl=jdbc:mysql://localhost:3306/spring_batch?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+#DataSource Configuration for App
+app.datasource.jdbcUrl=jdbc:mysql://localhost:3306/system_batch?createDatabaseIfNotExist=true&serverTimezone=UTC
+app.datasource.username=root
+app.datasource.password=root
+
+#Para o spring batch criar de form autom as tabelas
+spring.batch.jdbc.initialize-schema=always
